# gpd_ros

./: CMakeLists.txt  package.xml
action/: SampleGraspPoses.action
config/: gpd_config.yaml
include/gpd_ros/: grasp_detection_node.h  grasp_plotter.h
launch/: run.launch
src/gpd_ros/: grasp_detection_node.cpp  grasp_plotter.cpp
