<?xml version="1.0"?>
<package format="2">
  <name>gpd_ros</name>
  <version>0.0.0</version>
  <description>The gpd_ros package</description>

  <maintainer email="atenpas@todo.todo">atenpas</maintainer>
  <maintainer email="eric_huang@solomon-3d.com">youjun</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>actionlib</depend>
  <depend>eigen_conversions</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_eigen</depend>
  <depend>tf2_ros</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
